2000-12-02  Bryce McKinlay  <bryce@albatross.co.nz>

	* java/lang/natMath.cc: Declare fabsf() function.
	* java/lang/mprec.h: Don't include math.h.
	* java/lang/dtoa.c: Include string.h.
	* java/lang/natString.cc (toLowerCase): Initialize `ch' to prevent
	compiler warning.

2000-12-01  Warren Levy  <warrenl@cygnus.com>

	* Makefile.am: Added entries for new java.sql modules.
	* Makefile.in: Rebuilt.

2000-12-01  Warren Levy  <warrenl@cygnus.com>

	* mauve-libgcj: Turned on JDK1.2 and turned off tests for classes
	that aren't quite 1.2 compatible yet.

2000-11-30  Warren Levy  <warrenl@cygnus.com>

	* java/sql/Array.java: New file from classpath.
	* java/sql/BatchUpdateException.java: Ditto.
	* java/sql/Blob.java: Ditto.
	* java/sql/Clob.java: Ditto.
	* java/sql/Ref.java: Ditto.
	* java/sql/SQLData.java: Ditto.
	* java/sql/SQLInput.java: Ditto.
	* java/sql/SQLOutput.java: Ditto.
	* java/sql/Struct.java: Ditto.
	* java/sql/CallableStatement.java: Merged file from claspath.
	* java/sql/Connection.java: Ditto.
	* java/sql/DataTruncation.java: Ditto.
	* java/sql/DatabaseMetaData.java: Ditto.
	* java/sql/DriverManager.java: Ditto.
	* java/sql/PreparedStatement.java: Ditto.
	* java/sql/ResultSet.java: Ditto.
	* java/sql/ResultSetMetaData.java: Ditto.
	* java/sql/SQLException.java: Ditto.
	* java/sql/SQLWarning.java: Ditto.
	* java/sql/Statement.java: Ditto.
	* java/sql/Types.java: Ditto.

2000-11-29  Bryce McKinlay  <bryce@albatross.co.nz>

	* java/lang/natSystem.cc (init_properties): Set user.language and
	user.region.
	* configure.in: Check for setlocale.
	* configure: Rebuilt.
	* include/config.h.in: Rebuilt.
	
	* java/util/zip/InflaterInputStream (read): Don't return -1 unless
	the infate() call didn't deliver any output. Throw a ZipException if
	the needsDictionary() call returns true.
	* java/io/ByteArrayInputStream (read): Remove redundant bounds checks.
	* java/io/InputStreamReader: Use the default buffer size for the
	contained BufferedInputStream.
